// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/NavigationDrawer.vue does not render the project related stuff when no project available 1`] = `
<nav class="v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--is-mobile theme--light" style="height: 100vh; top: 0px; transform: translateX(-100%); width: 256px;">
  <div class="v-navigation-drawer__content"></div>
  <div class="v-navigation-drawer__append">
    <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    <div class="v-list v-sheet v-sheet--tile theme--light v-list--dense v-list--subheader">
      <div class="v-subheader theme--light">citegraph</div> <a tabindex="0" class="v-list-item v-list-item--link theme--light">
        <div class="v-list-item__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle theme--light"></i></div>
        <div class="v-list-item__content">
          <div class="v-list-item__title">navigation-drawer.help</div>
        </div>
      </a> <a tabindex="0" class="v-list-item v-list-item--link theme--light">
        <div class="v-list-item__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-settings theme--light"></i></div>
        <div class="v-list-item__content">
          <div class="v-list-item__title">navigation-drawer.settings</div>
        </div>
      </a>
    </div>
  </div>
  <div class="v-navigation-drawer__border"></div>
</nav>
`;

exports[`components/NavigationDrawer.vue renders 1`] = `
<nav class="v-navigation-drawer v-navigation-drawer--close v-navigation-drawer--fixed v-navigation-drawer--is-mobile theme--light" style="height: 100vh; top: 0px; transform: translateX(-100%); width: 256px;">
  <div class="v-navigation-drawer__content">
    <div><a tabindex="0" class="mt-12 v-list-item v-list-item--link theme--light">
        <div class="v-list-item__content">
          <div class="v-list-item__title title">
            My awesome Project
          </div>
        </div>
      </a>
      <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
      <div class="v-list v-sheet v-sheet--tile theme--light v-list--nav"><a tabindex="0" class="v-list-item v-list-item--link theme--light">
          <div class="v-list-item__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-cloud-upload theme--light"></i></div>
          <div class="v-list-item__content">
            <div class="v-list-item__title">navigation-drawer.import</div>
          </div>
        </a>
        <div class="v-list-group">
          <div tabindex="0" aria-expanded="false" role="button" class="v-list-group__header v-list-item v-list-item--link theme--light">
            <div class="v-list-item__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-magnify theme--light"></i></div>
            <div class="v-list-item__content">
              <div class="v-list-item__title">navigation-drawer.explore.title</div>
            </div>
            <div class="v-list-item__icon v-list-group__header__append-icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-chevron-down theme--light"></i></div>
          </div>
          <div class="v-list-group__items" style="display: none;"></div>
        </div> <a tabindex="0" class="v-list-item v-list-item--link theme--light">
          <div class="v-list-item__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-clipboard-text theme--light"></i></div>
          <div class="v-list-item__content">
            <div class="v-list-item__title">navigation-drawer.visualize</div>
          </div>
        </a>
      </div>
    </div>
  </div>
  <div class="v-navigation-drawer__append">
    <hr role="separator" aria-orientation="horizontal" class="v-divider theme--light">
    <div class="v-list v-sheet v-sheet--tile theme--light v-list--dense v-list--subheader">
      <div class="v-subheader theme--light">citegraph</div> <a tabindex="0" class="v-list-item v-list-item--link theme--light">
        <div class="v-list-item__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-help-circle theme--light"></i></div>
        <div class="v-list-item__content">
          <div class="v-list-item__title">navigation-drawer.help</div>
        </div>
      </a> <a tabindex="0" class="v-list-item v-list-item--link theme--light">
        <div class="v-list-item__icon"><i aria-hidden="true" class="v-icon notranslate mdi mdi-settings theme--light"></i></div>
        <div class="v-list-item__content">
          <div class="v-list-item__title">navigation-drawer.settings</div>
        </div>
      </a>
    </div>
  </div>
  <div class="v-navigation-drawer__border"></div>
</nav>
`;
